sass/layout/_header.scss
// Header Layout
// ------------------------------------------------------------------------------------------------------

.site-header {
  margin-bottom: calc(3rem + #{$scale-value});

  @media screen and (max-width: 500px) {
    margin-bottom: calc(0.5rem + #{$scale-value});
  }
}

// Build the header grid layout
// -----------–-----------–-----------–
.site-header {
  display: grid;
  grid-template-areas:
    // "search search search search"
    "logo x x search"
    "arrow arrow arrow arrow"
    "nav nav nav nav";
  grid-gap: 0;
  // overflow: hidden; /* prevent scrollbars on search form hover */

  // //IE grid fix
  // @media all and (-ms-high-contrast: none) {
  //   .site-header {
  //     display: -ms-grid;
  //     -ms-grid-template-columns: repeat(4, 1fr);
  //     -ms-grid-template-rows: repeat(3, 1fr);
  //   }
  // }

  @media (max-width: #{$responsive-switch}) {
    box-shadow: 0 0 3rem 0 rgba(0, 0, 0, 0.09);
    overflow: visible;
  }

  // Logo
  // -----------–-----------–-----------–
  .site-branding {
    grid-area: logo;
    margin-top: 1rem;
    margin-left: 0.9vw;

    img {
      width: 45%;
      min-width: 6rem;
    }

    @media screen and (max-width: 600px) {
      margin-top: 4rem;
    }
  }

  // Search
  // -----------–-----------–-----------–

  // Our variable for search
  $search-dim: calc(2.25rem + #{$scale-value});

  .search-wrapper {
    grid-area: search;
    height: $search-dim;
    // width: calc(100% + (#{$rl-site-margin} * 2));
    width: auto;
    margin: 0 calc(#{$search-dim} * -1);
    margin-bottom: calc(1rem + #{$scale-value});
    background-color: none;
    transition: all 0.15s linear;

    @media screen and (max-width: 600px) {
      position: absolute;
      top: 0;
    }

    .search-form {
      height: $search-dim;
      float: right;
      width: calc(20rem + (#{$search-dim} * 2));
      position: relative;
      transition: all 0.2s linear;
      box-shadow: 0 0 3rem 0 rgba(0, 0, 0, 0.15);

      @media screen and (max-width: 600px) {
        width: 100vw;
      }

      @include on-event {
        box-shadow: 0 0 2rem 0.3rem rgba(0, 0, 0, 0.4);
        transform: scale(1.05) translate(-9px, 0);
        overflow: hidden;

        @media screen and (max-width: 600px) {
          transform: none;
          box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
        }
      }

      .search-field {
        height: $search-dim;
        padding: 0 1rem;
        clear: both;
        border: none;
        background-color: rgba(256, 256, 256, 0.7);
        border-radius: 0;
        font-style: normal;
        position: absolute;
        top: 0;
        right: calc(#{$search-dim} * 2);
        width: 20rem;
        font-size: calc(0.75rem + #{$scale-value});

        &::placeholder {
          font-style: italic;
        }

        @media screen and (max-width: 600px) {
          width: calc(100vw - ((2.25rem + 0.333vw) * 2.5));
        }

        @include on-event {
          background-color: white;
          color: #111;
          @include link-fade;

          &::placeholder {
            color: #111;
          }
        }

        &::placeholder {
          font-size: calc(0.75rem + #{$scale-value});
          font-style: italic;
          color: rgba(0, 0, 0, 0.6);
        }
      }

      // Search button
      button {
        border: none;
        height: $search-dim;
        width: calc(#{$search-dim} * 2);
        background-color: #dbd1c8;
        color: rgba(0, 0, 0, 0);
        line-height: $search-dim;
        padding: 0;
        position: absolute;
        top: 0;
        right: 0;
        border-radius: 0;
        cursor: pointer;

        @include on-event {
          background: darken($pale-hot, 13%);
          transition: all 0.15s linear;
        }

        .icon-search {
          height: $search-dim;
          width: calc(#{$search-dim} * 2);
          background: url("img/icon-search.svg");
          background-position: center;
          background-size: calc(1.75rem + #{$scale-value});
          background-repeat: no-repeat;
          display: block;
          transform: translateX(0.2rem); // center the icon visually
        }
      }
    }
  }
}

.arrow-wrapper {
  // See the below for the CSS arrow code
  grid-area: arrow;
}

.main-navigation {
  grid-area: nav;
  @include sans;
  font-size: calc(0.85rem + #{$scale-value-2});
  clear: both;
  display: block;
  width: calc(100% - 1vw);
  transform: translateY(calc(-1rem - #{$scale-value-2}));
  margin-left: 1vw;

  li {
    display: block;
    float: left;
    position: relative;
    background-position: left calc(50% - 0.25rem);
    background-repeat: no-repeat;
    margin-right: 1.5rem;

    &.icon-journal {
      background-image: url("img/icon-journal.svg");
      background-size: calc(1rem + #{$scale-value-2});
      padding-left: calc(1rem + #{$scale-value-2});
    }

    &.icon-logbook {
      background-image: url("img/icon-logbook.svg");
      background-size: calc(0.7rem + #{$scale-value-2});
      padding-left: calc(0.8rem + #{$scale-value-2});
    }

    &.icon-submissions {
      background-image: url("img/icon-submissions.svg");
      background-size: calc(1.3rem + #{$scale-value-2});
      padding-left: calc(1.3rem + #{$scale-value-2});
    }

    @media screen and (max-width: 38rem) {
      float: none;
      margin-bottom: 0.35rem;

      &.icon-journal {
        background-position: 0.19rem;
        padding-left: calc(1.6rem + #{$scale-value});
      }
      &.icon-logbook {
        background-position: 0.35rem;
        padding-left: calc(1.6rem + #{$scale-value});
      }
      &.icon-submissions {
        padding-left: calc(1.6rem + #{$scale-value});
      }
    }

    a {
      @include on-event {
        color: $hot;
      }
    }
  }
}

// The navigation arrow
// ------------------------------------------------------------------------------------------------------

$arrow-scale-value: 0.2vw;
$arrow-color: black;
$arrow-line-height: calc(0.05rem + #{$arrow-scale-value});
$arrow-square-side: calc(0.55rem + #{$arrow-scale-value});
$arrowhead-border: calc(0.5rem + #{$arrow-scale-value});
// NB: $rl-site-margin is found on _elements.scss

.arrow-wrapper {
  position: relative;
  height: calc(1.25rem + #{$arrow-scale-value});
  width: 100%;
  margin: #{$scale-value} 0 calc(1.25rem + #{$scale-value}) 0;
}

// The arrowhead
.arrow {
  border-top: #{$arrowhead-border} solid transparent;
  border-left: calc(1.8rem + #{$arrow-scale-value}) solid #{$arrow-color};
  border-bottom: #{$arrowhead-border} solid transparent;
  height: 0;
  width: 0;
  position: absolute;
  top: 0;
  right: 0;
}

// The line
.arrow::before {
  content: "";
  position: absolute;
  height: #{$arrow-line-height};
  min-height: 0.2rem;
  width: calc(
    100vw - (#{$rl-site-margin} * 2) - #{$arrow-square-side} - #{$arrowhead-border}
  ); // a little extra subtracted from the width to make sure the line doesn't overlap either of the ends
  background: #{$arrow-color};
  right: #{$arrow-square-side};
  top: 50%;
  transform: translateY(-50%);
  margin-left: 2rem;

  @media screen and (max-width: 500px) {
    width: calc(
      100vw - #{$rl-site-margin-small} - #{$rl-site-margin-small} - #{$arrow-square-side} -
        #{$arrowhead-border}
    );
  }
}

// The square end
.arrow::after {
  content: "";
  position: absolute;
  left: calc((100vw - #{$rl-site-margin} - #{$rl-site-margin}) * -1);
  top: 50%;
  transform: translateY(-50%);
  height: #{$arrow-square-side};
  width: #{$arrow-square-side};
  background: #{$arrow-color};

  @media screen and (max-width: 500px) {
    left: calc(
      (100vw - #{$rl-site-margin-small} - #{$rl-site-margin-small}) * -1
    );
  }
}

// ------------------------------------------------------------------------------------------------------
// The sliding discs
// ------------------------------------------------------------------------------------------------------
$disc-scale-dim: 0.7vw;
$disc-1-dim: calc(0.6rem + #{$disc-scale-dim});
$disc-2-dim: calc(0.3rem + #{$disc-scale-dim});
$disc-3-dim: calc(0.15rem + #{$disc-scale-dim});

// Need to get an accessible tooltip here instead
// $random-dim: calc(-50% - 0.4rem - 0.05vw - #{$disc-1-dim});
// Tooltip styles. Use the following for an accessible tooltip:
// <a href="#" aria-describedby="txt32" aria-controls="txt32" aria-haspopup="true" class="tooltip">role=link aria-describedby aria-haspopup=true</a> <span id="txt32">I am the tooltip text referenced to via aria-describedby.</span><br>
// http://pauljadam.com/demos/aria-role-tooltip.html

.tooltip {
  position: relative;
  display: inline-block;

  .tooltiptext {
    visibility: hidden;
    opacity: 0;
    width: 12rem;
    background-color: $dark-hot;
    color: rgba(white, 1);
    @include sans;
    text-align: center;
    font-size: 65%;
    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.35);
    transition: all 0.3s;
    transition-delay: 0.3s;
    padding: 0.5rem 0;
    position: absolute;
    z-index: 1;
    bottom: 100%;
    left: 50%;
    margin-left: -6rem;
    transform: translateY(-1.5rem);

    &::after {
      transition: all 0.3s;
      transition-delay: 0.3s;
      content: " ";
      position: absolute;
      top: 100%;
      left: 50%;
      margin-left: -5px;
      border-width: 5px;
      border-style: solid;
      border-color: $dark-hot transparent transparent transparent;
    }

    .tooltip-arrow {
      display: inline-flex;
      background-image: url("img/arrow-right.svg");
      background-position: left bottom;
      background-repeat: no-repeat;
      background-size: 1rem;
      height: 0.75rem;
      width: 0.8rem;
      padding: 0 0.15rem 0 0;
      opacity: 0.5;
    }
  }

  @include on-event {
    .tooltiptext {
      visibility: visible;
    }
  }
}

.disc {
  border: calc(0.2rem + 0.05vw) solid black; // using a smaller scale value here
  border-radius: 50%;
  display: block;
  position: absolute;
  top: calc(50% - (#{$arrow-line-height} / 2));
  transform: translateY(calc((50% - (#{$arrow-line-height} / 4)) * -1));
  box-sizing: content-box;
  transition: all 0.15s;
  cursor: pointer;

  @include on-event {
    background-color: $dark-hot !important;
    border-color: $dark-hot;
    transition: all 0.2s;
    box-shadow: 0 0 0 3px rgba(black, 1);

    .tooltiptext {
      visibility: visible;
      opacity: 1;
      transition: all 0.3s;
      transform: translateY(-0.8rem);

      @media screen and (max-width: 500px) {
        // Don't display the rollover text on small screens
        visibility: hidden;
        opacity: 0;
      }

      &::after {
        transition: all 0.3s;
      }

      &:hover {
        background-color: black;

        &::after {
          border-color: black transparent transparent transparent;
        }
      }
    }
  }
}

.disc-1 {
  height: $disc-1-dim;
  width: $disc-1-dim;
  background-color: #ffa187;
}

.disc-2 {
  height: $disc-2-dim;
  width: $disc-2-dim;
  background-color: #f26c48;
}

.disc-3 {
  height: $disc-3-dim;
  width: $disc-3-dim;
  background-color: #fff;
}

@keyframes fade {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 100%;
  }
}

